kube-app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: kube-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-app-service
                port:
                  number: 80
